[gd_scene load_steps=9 format=2]

[ext_resource path="res://editor/icon/temp/047-home.png" type="Texture" id=1]
[ext_resource path="res://editor/icon/temp/044-menu.png" type="Texture" id=2]
[ext_resource path="res://editor/icon/temp/022-copy.png" type="Texture" id=3]
[ext_resource path="res://editor/icon/temp/053-lifebuoy.png" type="Texture" id=4]
[ext_resource path="res://editor/icon/temp/021-command.png" type="Texture" id=5]
[ext_resource path="res://editor/icon/temp/071-print.png" type="Texture" id=6]
[ext_resource path="res://experiment/ui-classes-1/window_options.gd" type="Script" id=7]
[ext_resource path="res://experiment/ui-representations/exp_hvbox_5.tscn" type="PackedScene" id=8]

[node name="exp_full" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="window" type="Control" parent="."]
margin_right = 1020.0
margin_bottom = 598.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="document_holder" type="ScrollContainer" parent="window"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1020, 550 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exp_hvbox_5" parent="window/document_holder" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1375.0
margin_bottom = 3306.0

[node name="window_options" type="Control" parent="window"]
margin_right = 1020.0
margin_bottom = 50.0
rect_min_size = Vector2( 1020, 50 )
script = ExtResource( 7 )

[node name="secondary" type="HBoxContainer" parent="window/window_options"]
margin_right = 252.0
margin_bottom = 40.0
rect_scale = Vector2( 1.03728, 0.893937 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="help" type="Button" parent="window/window_options/secondary"]
margin_right = 44.0
margin_bottom = 40.0
hint_tooltip = "Help"
icon = ExtResource( 4 )

[node name="settings" type="Button" parent="window/window_options/secondary"]
margin_left = 48.0
margin_right = 92.0
margin_bottom = 40.0
hint_tooltip = "Settings"
icon = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="controls" type="Button" parent="window/window_options/secondary"]
margin_left = 96.0
margin_right = 140.0
margin_bottom = 40.0
hint_tooltip = "Controls"
icon = ExtResource( 5 )

[node name="main" type="HBoxContainer" parent="window/window_options"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -140.0
margin_bottom = 38.0
rect_scale = Vector2( 1.03728, 0.893937 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="profile" type="Button" parent="window/window_options/main"]
margin_right = 44.0
margin_bottom = 38.0
hint_tooltip = "Profile"
icon = ExtResource( 1 )

[node name="files" type="Button" parent="window/window_options/main"]
margin_left = 48.0
margin_right = 92.0
margin_bottom = 38.0
hint_tooltip = "Open File"
icon = ExtResource( 3 )

[node name="export" type="Button" parent="window/window_options/main"]
margin_left = 96.0
margin_right = 140.0
margin_bottom = 38.0
hint_tooltip = "Export to JSON"
icon = ExtResource( 6 )

[connection signal="pressed" from="window/window_options/secondary/help" to="window/window_options" method="open_help"]
[connection signal="pressed" from="window/window_options/secondary/settings" to="window/window_options" method="open_settings"]
[connection signal="pressed" from="window/window_options/secondary/controls" to="window/window_options" method="open_controls"]
[connection signal="pressed" from="window/window_options/main/profile" to="window/window_options" method="open_profile"]
[connection signal="pressed" from="window/window_options/main/files" to="window/window_options" method="open_files"]
[connection signal="pressed" from="window/window_options/main/export" to="window/window_options" method="open_export"]
