extends Control

# Main Window Options

func open_help():
  print("open help")
  pass
  
func open_settings():
  print("open settings")
  pass

func open_controls():
  print("open controls")
  pass

func open_profile():
  print("open profile")
  pass

func open_files():
  print("open files")
  pass

func open_export():
  print("open export")
  pass

func zoom_full():
  print("zoom reset")
  pass

func zoom_in():
  print("zoom in")
  pass

func zoom_out():
  print("zoom out")
  pass
